permutation rename data structure interface